--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.2",
     "framer-motion": "^12.23.12",
-    "gsap": "^3.13.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
@@ -26,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4",
     "typescript": "5.9.2"
   }
